--- a/playtesting/2017-05-02.md
+++ b/playtesting/2017-05-02.md
@@ -1,6 +1,8 @@
-# Cambridge Playtest - 4p - 10 months
+# Cambridge Playtest - 4p
 
-Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Cambridge crowd with a few modifications.
+Tested a modified [v4](https://github.com/matteomenapace/beesness/tree/v4) with the Cambridge PlaytestUK crowd.
+
+Modifications:
 
 * Gave 1st player 12 honey, 2nd 13 honey, 3rd 14 honey and 4th 15 honey. No throw of the die to give more to others
 * Replanting was done as **one flower per player plus throw of the die**
@@ -17,49 +19,45 @@ Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Cambridge c
 ## Even better if
 
 - Beginning was slow, but gets fun in the end
-- Number of turns needs to be figured out
-  - 6 turns was too short for a strategy involving queen bees (expensive and power is turn dependent)
-- Once you get a good hive every turn is repetitive, not many decisions. There's seemes to be a solution to the game and not multiple strategies (start with workers, get double queen, amass drones)
-- *Stalk exchange* seemed pointless, everyone figured out they always had to put in their flowers because flowers only increased every marked
+- Number of turns needs to be figured out: 6 turns was too short for a strategy involving queen bees (expensive and power is turn-dependent)
+- Once you get a good hive every turn is repetitive, not many decisions. There's seems to be an optimal strategy to win the game (start with workers, get double queen, amass drones) and not multiple strategies
+- *Stalk exchange* seemed pointless, everyone figured out they always had to put in their flowers because flowers only increased every round
 - *Tragedy of the commons* affects people with smaller hives (poorer), maybe player with least number in hive doesn't donate a bee? That would be a good way for the last place to have a comeback.
-- *Tragedy of the commons* was basically non-existent as someone pointed out (this is not verbatim) "if I wanted the game to end then I would just leave, I don't need a vote". So I guess this phase could be the austerity phase instead of a vote!!!
+- *Tragedy of the commons* was basically non-existent as someone pointed out (this is not verbatim) `if I wanted the game to end then I would just leave, I don't need a vote`. So I guess this phase could be the austerity phase instead of a vote!!!
 - Buying a drone in the first turn was agreed as a very bad strategy (see score of P2)
 
 ## Comments
 
 - Double queen is too powerful, also once you have the queen the 2nd queen is 50% off! The player built a Drone army
-- Double Queen Bee let's you buy workers at 2 honey but if forced to sell from drone strike you get 6 honey back! PROFIT!
-- Market was not very useful, it was most of the time at 3 honey per flower and only reached 2 honey per flower last round.
-  - They felt they weren't engaging with the market it was more of a oh what will be the price than a game of negotiation and bluffing
+- Double Queen Bee lets you buy workers at 2 honey but if forced to sell from drone strike you get 6 honey back! PROFIT!
+- Market was not very useful, it was most of the time at 3 honey per flower and only reached 2 honey per flower last round. They felt they weren't engaging with the market, it was more of a `oh what will be the price` than a game of negotiation and bluffing
 
 ## Ideas
 
-- There seems to be a solution to the game and if you play it once then that's it so replayability is affected.
+- There seems to be an optimal strategy to win the game (start with workers, get double queen, amass drones) so replayability is affected:
   - new kinds of bees would help
   - stealing flowers instead of honey
   - defensive bees
-- Limit the number of buys you can do to limit people amassing one drones and workers
+- Limit the number of buys you can do to limit people amassing drones and workers
 - Best idea that would add some complexity whilst not changing the game much is using **flower colours**!
 
 ### Flower colours
 
-At the moment there's only 3 types of bees which doesn't lead to many complex decisions on what bee to buy or which flower to sell. The proposed solution:
+At the moment there's only 3 types of bees, which limits the player choice on what bee to buy or which flower to sell. 
 
-Each worker bee can only pickup one type of colour flower. So let's say theres red, green and blue flowers; well in this case there will be a red worker, a green worker and blue worker (I guess you could have an expensive joker (rainbow) worker too). Each worker will be able to pick their own flower type. So deciding which colour to pick is as important as your drone/worker/queen strategy.
+The proposed solution: introduce **colours for flowers, honey and bees**!
 
-The same for a Queen bee, there's a red queen, blue queen and green queen and they give you 50% on any bees of the same colour.
+Each **worker bee can only pick one type of coloured flower.** So let's say there's red, green and blue flowers; in this case there will be a red worker, a green worker and blue worker (I guess there could be an expensive joker/rainbow worker too). Each worker will be able to pick only their own flower type, so deciding which colour to pick is as important as your drone/worker/queen choice.
 
-With drones it gets more complex but my solution is that we also have honey colours, red flowers procude red tinted honey (graphically the honey is still gold but maybe the edge-lines are red) and so on.
+The same goes for the queen bee. There's a red queen, blue queen and green queen and they give you **50% only on bees of that same colour**.
 
-But the other drone option which is cool is that flowers are secret and drones steal flowers. So if you use a red drone on someone with no red flowers you just wasted your drone!
+With drones it gets more complex but my solution is that we also have honey colours, red flowers produce "red" honey (graphically the honey is still gold but maybe the edge-lines are red) and so on. But the other drone option (which is cool) is that **flowers are secret and drones steal flowers**. So if you use a red drone on someone with no red flowers you just wasted your drone!
 
-One clever way of forcing people to diversify is Reinier Knizia's awesome scoring mechanic (shows up in Ingenious and Tigris and Euphrates games):
-* you don't score your total honey, not even the honey colour that is higher (so in this case if 5redHoney, 3 blueHoney, 4greenHoney your end score is 5)
-* You score your lowest honey colour! (so for the example above if 5redHoney, 3 blueHoney, 4greenHoney your end score is 3)
+One clever way of forcing people to **diversify** is Reiner Knizia's awesome scoring mechanic (shows up in Ingenious and Tigris and Euphrates games):
+* You don't score your total honey, not even the honey colour that is higher (so in this case if 5 redHoney, 3 blueHoney, 4greenHoney your end score would be 5)
+* You score your **lowest honey colour**! So, if 5 redHoney, 3 blueHoney, 4 greenHoney your end score is 3.
 
-The market would also change but flower colours could change depending on the round.
-
-My suggestion is to have a market that goes up or down depending on some random cards/tiles that appear on the month dates. You should only be able to see 2 months in front of you how the market changes.
+The market would also change but flower colours could change depending on the round. My suggestion is to have a **market that fluctuates depending on some random cards/tiles** that appear on the month dates. You should only be able to see 2 months in front of you how the market changes.
 
 All flower rates start at 3 honey per flower and then fluctuate:
 
@@ -69,17 +67,17 @@ All flower rates start at 3 honey per flower and then fluctuate:
 | Blue Down-2 (now 1 honey per flower) |  Blue Up-1 | Blue Down-1  | *  | *  |
 | Red Same  (3 honey per flower) |  Red Down-1 | Red Down-1  | *  |  * |
 
-The secret bidding could be implemented but hasn't seemed to work, I guess we need to have an incentive to store.
+The secret bidding could be implemented but hasn't seemed to work, I guess we need to have an **incentive to store flowers** rather than selling them immediately.
 
 \* Unknown yet
 
-## Final Scores for the record
+## Final scores for the record
 
 Winner is P4, I am ashamed to declare which player I was.
 
 |   | P1   | P2   | P3   | **P4**  |
 |---|---|---|---|---|
-|  Worker | 6  | 0  | 6  | **4**  |
+| Worker | 6  | 0  | 6  | **4**  |
 | Drone  |  1 | 0  | 3  | **9**  |
-| Queen   |  0 | 0  | 0  |  **2** |
-| Honey   |  43 | 11  | 35  | **52**  |
+| Queen  |  0 | 0  | 0  |  **2** |
+| Honey  |  43 | 11  | 35  | **52**  |
