--- a/playtesting/2017-04-08.md
+++ b/playtesting/2017-04-08.md
@@ -2,13 +2,13 @@
 
 Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee.
 
-### What went well
+## What went well
 
 - Printed cards and wood tokens feel good.
 - *Stalk exchange* mechanic creates excitement. `What's it gonna beee?`
 - Drones create drama (we knew that already, but hey)
 
-### Even better if...
+## Even better if...
 
 - Drones seem too powerful. There is no risk involved in using them, apart from the threat of retaliation from other players. In a 2-player game, you may end up buying drones just to pass honey back and forth from each other
 - The *stalk exchange* is rather predictable in a 2-player game.
@@ -59,7 +59,7 @@ Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee, Nels
 
 Nelson mentioned that `bees knees` allegedly is a phrase originated in Italo-American NYC communities (mispronunciation of `business`)
 
-### Nelson suggests
+## Nelson suggests
 
 * A couple of extra cards:
 
@@ -89,7 +89,7 @@ New bees suggested:
 
 Ben started a **reseller market**: bought a queen, then started buying up cheap bees and offering them to other players at a slightly higher price.
 
-### The referendum
+## The referendum
 
 The big change we introduced to the game in this session relates to the **beesaster situation**. After several failed attempts at replanting, with flowers stuck at 1, Alex noted that the consensus system is tricky/broken because there will always be some player who has no incentive to donate bees and replant flowers (`by the time my turn comes, those flowers will have been taken`). Neale suggested the replanting goes ahead if there is a **majority** of players willing to donate. There was some resistance from other players but we decided to try it. So **referendum** it was. We then noticed that 1 bee for 1 flower seemed to be not enough of an incentive for players to donate bees (again, they worked out that by the time their turn would come those flowers would be gone). So we decided **each donated bee will get you 2 flowers**.
 
@@ -101,7 +101,7 @@ The big change we introduced to the game in this session relates to the **beesas
 
 Tested v4.1 (v4 + referendum) with Ben, Matt, ???, Phil and Justin at NowPlayThis.
 
-### The referendum, again
+## The referendum, again
 
 We clarified the referendum mechanics: as soon as the number of flowers goes under the number of players, and as long as it stays under, you can **trigger a beesaster referendum at any point during your turn**. 
 
@@ -111,7 +111,7 @@ This also means that multiple referendums could be triggered during the same rou
 
 When negotiating a referendum, people started to bribe other players for their vote, offering honey (not flowers).
 
-### Other suggestions
+## Other suggestions
 
 * Queen to be able to steal bees from other beesnesses?
 
@@ -136,7 +136,7 @@ The **referendum** mechanics worked well and sparked drama throughout the game, 
 
 At some point people created a **coalition** against one team which was perceived to be too strong. They agreed to sell drones to each other `for dirt cheap` so that they could steal more honey. The coalition broke down after a couple of turns when one team decided to keep the drones they had just been given. Whilst an interesting tactic, it felt a little too dirty to be allowed as is, so I proposed that the trading of bees can happen as a **public auction** to which every player can take part. That way you can still trade them, but the player being targeted can still counteract the coalition by taking part in the auction.  
 
-### Other suggestions
+## Other suggestions
 
 * **Marketplace prices change** each time? I think this means having more variety in the outcomes of the marketplace.
 * It would be nice to have **multiple ways to win the game**, not just hoarding honey.
@@ -160,7 +160,7 @@ After the event I sent people a quick questionnaire:
 
 Here are the [results](https://matteomenapace.typeform.com/report/lgXLLi/Zm4y): 5/13 people answered.
 
-### Are there any aspects of the game that you found confusing?
+## Are there any aspects of the game that you found confusing?
 
 1. **2/5** the *sequence of actions* (eg: buy cards, use cards, trade flowers), with one explaining that `at times I was so focussed on what other players were doing that I forgot the order of the actions`.
 2. **1/5** *replanting flowers*, the *metaphors*, the *everybody loses when all flowers are gone* situation, the *game goal* and the *opening dice roll*
@@ -172,13 +172,13 @@ Here are the [results](https://matteomenapace.typeform.com/report/lgXLLi/Zm4y): 
 	- `Is the final goal to maintain enough flowers to keep the bees alive or to get the most honey, even at the cost of maintaining just the one last flower? Maybe the bees start dying if there are too few flowers (say one per bee), before total extinction if there are no more flowers.`
 3. **0/5** the *worker bees*, the *drones*, the *queen*, the *flower market*, the *game's manual* (we didn't test this because I was explaining the game) and the *flower-honey conversion chart*.
 
-### Did you start to feel bored at any point during the game?
+## Did you start to feel bored at any point during the game?
 
 * Not bored but I didn't get a chance to look at all of the other exhibits because the game took longer than expected. Maybe a **quick play version** of the game would be good?
 * Perhaps **less than 12 rounds**. Completing the game in 30 minutes would be better as it took around 60 minutes.
 * When it became clear I couldn't win, however, this was due to an obviously poor strategy (that I just wanted to try out), so it's my fault. 
 
-### How likely are you to recommend Beesness to your friends?
+## How likely are you to recommend Beesness to your friends?
 
 **Average 7**
 
