--- a/playtesting/2017-05-06.md
+++ b/playtesting/2017-05-06.md
@@ -1,12 +1,12 @@
-# GameCamp - 4p
+# GameCamp - 3p
 
 Tested a modified [v4](https://github.com/matteomenapace/beesness/tree/v4) with three players at [GameCamp](https://gamecamp.org.uk/).
 
 Modifications:
 
-* 9 rounds instead of 12
-* No strict order of actions on player turns (aka `laissez-faire`): you can steal honey, then buy cards and steal again if you like (more on that below)
-* Replanting **one flower per player**
+* 9 rounds instead of 12.
+* No strict order of actions on player turns (aka `laissez-faire`): you can steal honey, then buy cards and steal again if you like (more on that below).
+* Replanting **one flower per player**.
 
 ## What went well
 
@@ -36,9 +36,9 @@ Modifications:
 
 ## Actions
 
-- [ ] Try a few games without the queen. 
-- [ ] Keep experimenting with 9-rounds.
-- [ ] Try the drone power as `dice - drones of the player you're attacking`. For example: if I attack a player that has 3 drones, then I'll roll the die and take `die - 3` from them. If the number is negative, then you end up giving them some honey.
+- [x] Try a few games without the queen. 
+- [x] Keep experimenting with 9-rounds.
+- [x] Try the drone power as `dice - drones of the player you're attacking`. For example: if I attack a player that has 3 drones, then I'll roll the die and take `die - 3` from them. If the number is negative, then you end up giving them some honey.
 - [ ] Last few flowers are more expensive to extract?
 - [ ] How could the `environmental apocalypse` be triggered involuntarily? Immediately after a referendum vote (and before replanting) if you voted `yes` you get a honey, if you voted `no` you get a flower. This means that you may run out of flowers before you get to replant them, even if `yes` won.  
 
