Updated versions links

--- a/playtesting/2017-03-08.md
+++ b/playtesting/2017-03-08.md
@@ -1,3 +1,7 @@
+# v3 - 5p
+
+Tested [v3](../versions/v3) with 5 Decoded peeps: Jonny, Josh, Marc, Federico and Howard. 
+
 ### Things I've heard through the grapevine
 
 "Drones are fun" - Jonny
