--- a/playtesting/2017-03-22.md
+++ b/playtesting/2017-03-22.md
@@ -1,4 +1,4 @@
-Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with 10 (but max 7 playing at the same time) [Ada](http://adacollege.org.uk/) students + [Tina](https://twitter.com/t0mf00lery).
+Tested [v4](../versions/v4) with 10 (but max 7 playing at the same time) [Ada](http://adacollege.org.uk/) students + [Tina](https://twitter.com/t0mf00lery).
 
 ### Things I've heard through the grapevine
 
