--- a/playtesting/2017-03-24.md
+++ b/playtesting/2017-03-24.md
@@ -1,4 +1,4 @@
-Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with 4 primary school children.
+Tested [v4](../versions/v4) with 4 primary school children.
 
 ### What worked
 
