--- a/playtesting/2017-04-08.md
+++ b/playtesting/2017-04-08.md
@@ -1,6 +1,6 @@
 # 2p - v4
 
-Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee.
+Tested [v4](../versions/v4) with Aimee.
 
 ## What went well
 
@@ -55,7 +55,7 @@ Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee.
 	
 # NPT1 | 4p - v4
 
-Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Aimee, Nelson and Lee at NowPlayThis.
+Tested [v4](../versions/v4) with Aimee, Nelson and Lee at NowPlayThis.
 
 Nelson mentioned that `bees knees` allegedly is a phrase originated in Italo-American NYC communities (mispronunciation of `business`)
 
@@ -78,7 +78,7 @@ In the Typeform NPS Nelson gave it an 8, as `it has the potential to be a fun ga
 
 # NPT2 | 5p - v4
 
-Tested [v4](https://github.com/matteomenapace/beesness/tree/v4) with Ben, Alex, Maria, Jennie and Neale at NowPlayThis.
+Tested [v4](../versions/v4) with Ben, Alex, Maria, Jennie and Neale at NowPlayThis.
 
 Ben and Alex commented that the game would be quite different if we had some cardboard to **hide your cards and honey** (like in [Game of Thrones](https://boardgamegeek.com/boardgame/103343/game-thrones-board-game-second-edition))
 
