--- a/playtesting/2017-05-02.md
+++ b/playtesting/2017-05-02.md
@@ -1,6 +1,6 @@
 # Cambridge Playtest - 4p
 
-Tested a modified [v4](https://github.com/matteomenapace/beesness/tree/v4) with the Cambridge PlaytestUK crowd.
+Tested a modified [v4](../versions/v4) with the Cambridge PlaytestUK crowd.
 
 Modifications:
 
