--- a/playtesting/2017-05-06.md
+++ b/playtesting/2017-05-06.md
@@ -1,6 +1,6 @@
 # GameCamp - 3p
 
-Tested a modified [v4](https://github.com/matteomenapace/beesness/tree/v4) with three players at [GameCamp](https://gamecamp.org.uk/).
+Tested a modified [v4.1](../versions/v4.1) with three players at [GameCamp](https://gamecamp.org.uk/).
 
 Modifications:
 
