--- a/playtesting/2017-05-08.md
+++ b/playtesting/2017-05-08.md
@@ -1,6 +1,6 @@
 # PlaytestUK - 3p
 
-Tested a modified [v4](https://github.com/matteomenapace/beesness/tree/v4) with three players at [PLaytestUK](https://www.meetup.com/Playtest/events/238614773/): Bez, Mike I and Mike H.
+Tested a modified [v4.1](../versions/v4.1) with three players at [PLaytestUK](https://www.meetup.com/Playtest/events/238614773/): Bez, Mike I and Mike H.
 
 Modifications:
 
