--- a/playtesting/2017-05-06.md
+++ b/playtesting/2017-05-06.md
@@ -8,19 +8,21 @@ Modifications:
 * No strict order of actions on player turns (aka `laissez-faire`): you can steal honey, then buy cards and steal again if you like (more on that below).
 * Replanting **one flower per player**.
 
+Final scores:
+
+|  | Tillman | Claude | Ian | 
+|--|----|----|----|
+| Worker | 3 | 4 | 1 | 
+| Drone  | 0 | 0 | 3 | 
+| Queen  | 1 | 0 | 0 | 
+| Honey  | 16 | 17 | 17 |
+
 ## What went well
 
 - Players liked the game idea and found the metaphor fitting
 - They complimented the game's visual design
 - 9 turns seems like a decent length, time-wise: it took about 25 minutes to get from start to end. 
 - Final scores were very close: 16 - 17 - 17 (joint winner)
-
-|  | P1 | P2 | P3 | 
-|--|----|----|----|
-| Worker | 3 | 4 | 1 | 
-| Drone  | 0 | 0 | 3 | 
-| Queen  | 1 | 0 | 0 | 
-| Honey  | 16 | 17 | 17 |
 
 ## Even better if
 
