Playtesting at the Hive, 10th of May, with @somehats @sblausten, Denise and Ben

--- a/playtesting/2017-05-08.md
+++ b/playtesting/2017-05-08.md
@@ -10,18 +10,19 @@ Modifications:
 * **No queen**.
 * **Drone** power as `dice - drones of the player you're attacking`. For example: if I attack a player that has 3 drones, then I'll roll the die and take `die - 3` from them. If the number is negative, then you end up giving them some honey.
 
+Final scores:
+
+|  | Mike I | Bez | Mike H | 
+|--|----|----|----|
+| Worker | 4 | 1 | 1 | 
+| Drone  | 1 | 3 | 3 | 
+| Honey  | very little | a lot | a lot |
+
 ## What went well
 
 - Players liked the game idea and found the metaphor fitting
 - They complimented the game's visual design
 - 9 turns seems like a decent length, time-wise: it took about 20 minutes to get from start to end. 
-- Final scores were very close: 16 - 17 - 17 (joint winner)
-
-|  | P1 | P2 | P3 | 
-|--|----|----|----|
-| Worker | 4 | 1 | 1 | 
-| Drone  | 1 | 3 | 3 | 
-| Honey  | very little | a lot | a lot |
 
 ## Even better if
 
@@ -52,10 +53,10 @@ Maybe the next experiment could be:
 
 ## Actions
 
-- [ ] Keep trying without the queen. 
-- [ ] Keep experimenting with 9-rounds.
-- [ ] **Start with a worker, a drone and 12 honey** (no die roll).
-- [ ] Keep trying the drone power as `dice - drones of the player you're attacking`. However the **drone can steal only honey**, so you should be encouraged to keep your wealth in flowers and sell them on the market later.
+- [x] Keep experimenting without the queen. 
+- [x] Keep experimenting with 9-rounds.
+- [x] **Start with a worker, a drone and 12 honey** (no die roll).
+- [x] Keep experimenting with the drone power as `dice - drones of the player you're attacking`. However the **drone can steal only honey**, so you should be encouraged to keep your wealth in flowers and sell them on the market later.
 - [ ] How could the `environmental apocalypse` be triggered involuntarily? Immediately after a referendum vote (and before replanting) if you voted `yes` you get a honey, if you voted `no` you get a flower. This means that you may run out of flowers before you get to replant them, even if `yes` won.  
 
 
