--- a/playtesting/2017-05-08.md
+++ b/playtesting/2017-05-08.md
@@ -2,6 +2,8 @@
 
 Tested a modified [v4.1](../versions/v4.1) with three players at [PLaytestUK](https://www.meetup.com/Playtest/events/238614773/): Bez, Mike I and Mike H.
 
+[Listen to their feedback](https://soundcloud.com/bpt20170508/playtestuk-jugged-hare?in=beesness/sets/playtesting).
+
 Modifications:
 
 * **9 rounds** instead of 12.
