--- a/playtesting/2017-05-10.md
+++ b/playtesting/2017-05-10.md
@@ -4,6 +4,8 @@ Tested a modified [v4.1](../versions/v4.1) with Sam, Denise, Alex and Ben at [Th
 
 This was mostly an experiment to test an alternative drone mechanic (using dice and having the drone as a defence card as well).
 
+[Listen to them playing](https://soundcloud.com/bpt20170510/alex-ben-denise-sam-the-hive-12?in=beesness/sets/playtesting) and [their feedback after](https://soundcloud.com/bpt20170510/alex-ben-denise-sam-the-hive-22?in=beesness/sets/playtesting).
+
 Modifications:
 
 * **8 rounds** instead of 12.
