--- a/playtesting/2017-05-11.md
+++ b/playtesting/2017-05-11.md
@@ -34,7 +34,7 @@ Modifications:
 * **8 rounds** instead of 12.
 * Replanting **one flower per player**.
 * **Ref**: instead of 1 vote per player, you get one vote per bee (hard to solo-test but sounds like a good idea).
-* Each player could only pick flowers of their chosen colour (to limit 1st-player advantage).
+* Each player can only pick flowers of their chosen colour (to limit 1st-player advantage). This also means that *Beesaster* happens **if flowers go below the number of players** (eg: with 4 players, the game is over if there are 3 or less flowers left).
 * **Bees market**. Instead of buying bees during their turn, players buy their bees all together, right after they sold flowers (to limit 1st-player advantage).
 * Reintroduced the **queen** and made a big change to the **drone** (more on that in the table below).
 
@@ -63,11 +63,11 @@ Still, because drones are now the cheapest card (although they are the only *exp
 
 ## Actions
 
-- [ ] Keep experimenting with 9 rounds for 3 players, 8 rounds for 4 (and 10 for 5?). This really depends on how we mitigate the first-player advantage. If there was little/no advantage, then the number of rounds wouldn't really matter and we could think of it more in terms of minutes (around 30 ideally)
-- [ ] **Start with a worker, a drone and 6 honey** (no die roll).
-- [ ] Keep experimenting with the **drone as an expendable card**.
-- [ ] Experiment with the queen as *savings account*. 
-- [ ] **Bees market** right after the flower market and before the start of a new round.
-- [ ] Experiment with the *privatised garden*, a partition of the Garden of Commons where only you can pick flowers. You **replant 1 flower per colour**.
-* [ ] **Ref**: instead of 1 vote per player, you get one vote per bee.
+- [x] Keep experimenting with 9 rounds for 3 players, 8 rounds for 4 (and 10 for 5?). This really depends on how we mitigate the first-player advantage. If there was little/no advantage, then the number of rounds wouldn't really matter and we could think of it more in terms of minutes (around 30 ideally)
+- [x] **Start with a worker, a drone and 6 honey** (no die roll).
+- [x] Keep experimenting with the **drone as an expendable card**.
+- [x] Experiment with the queen as *savings account*. 
+- [x] **Bees market** right after the flower market and before the start of a new round.
+- [x] Experiment with the *privatised garden*, a partition of the Garden of Commons where only you can pick flowers. You **replant 1 flower per colour**.
+* [x] **Ref**: instead of 1 vote per player, you get one vote per bee.
 - [ ] How could the `environmental apocalypse` be triggered involuntarily? Immediately after a referendum vote (and before replanting) if you voted `yes` you get a honey, if you voted `no` you get a flower. This means that you may run out of flowers before you get to replant them, even if `yes` won.  
