Playtesting with @pixelpusher, Dan, Yvonne, Gideon, Raminta, Paris and Alex.

--- a/playtesting/2017-05-19.md
+++ b/playtesting/2017-05-19.md
@@ -51,6 +51,8 @@ People suggested a few things:
 	![](assets/2017-05-19-brandy.jpg)
 
 * Both Amy and Brandy felt uneasy with the combative / competitive nature of the game, being constantly pitted against each other and ending up *robbing or being robbed*.
+
+	Amy also suggested that when playing in teams, it would be more fun to pair up people who don't know each other.
 	![](assets/2017-05-19-amy.jpg)
 
 * Evan felt the flower market was *unfair*.
