--- a/playtesting/2017-05-30.md
+++ b/playtesting/2017-05-30.md
@@ -28,6 +28,8 @@ Final scores:
 
 ## Even better if
 
+This version seems to produce a really tense and competitive game (in comparison to previous versions). Even though there's more honey "flowing" from the market it seems that cheap drones are fostering a **scarcity mentality** and a race to spend/save all your honey asap. This is quite interesting as a comment on the current state of our society, but it doesn't necessarily translate into a fun, replayable experience.
+
 * Paris commented that the *beesaster referendum* was used  by players with lots of bees as a *machiavellian* move to curb the opponents, rather than a way to preserve nature. He suggested that each player gets a vote, rather than one vote per bee.
 * The flowers market on most rounds was giving 6 honey per flower (`1P` ... `2P-1`). Maybe it could be skewed even more to 12, 9, 6, 3, 0? 
 * Flowers have an upper limit. If you trigger multiple referendums you won't flood the garden, as you can't put more flowers that there are in the box (12 per colour).
