--- a/playtesting/2017-06-02.md
+++ b/playtesting/2017-06-02.md
@@ -46,19 +46,27 @@ I'm not recording how many bees they ended with, as they've been trading them (m
 
 * People like the idea of **round-based events**, eg *this round everyone loses a worker*, or *this round the queen is striking*
 
+![](assets/2017-06-02-davide.jpeg)
+
+![](assets/2017-06-02-fabiana.jpeg)
+
+![](assets/2017-06-02-sima.jpeg)
+
+![](assets/2017-06-02-tom.jpeg)
+
 ## Actions
 
-- [ ] Keep experimenting with **trading** bees, eg trade a worker for 2 drones, 2 workers for a queen etc.
-- [ ] Keep experimenting with **bee scarcity**: 6D, 6W and 6Q (and solo-playtest these numbers for the 3P and 5P scenarios).
+- [x] Keep experimenting with **trading** bees, eg trade a worker for 2 drones, 2 workers for a queen etc.
+- [x] Keep experimenting with **bee scarcity**: 6D, 6W and 6Q (and solo-playtest these numbers for the 3P and 5P scenarios).
 - [ ] **Referendum**: each player gets a vote. If it's a tie, you count the number of bees (larger beesnesses win).
 - [ ] Reference cards: players can play their turn **actions in any order**.
 - [ ] Reference cards: make it clear that players can **use all their cards** they have during their turn.
 - [ ] Reference cards: remove reference to `selling` bees (it's trading). 
 - [ ] **Timer**: 1 minute.
-- [ ] Honey limit (12) should be on the Queen card.
+- [x] Honey limit (12) should be on the Queen card.
 - [ ] **Market prices**: 12, 9, 6, 3, 0?
 - [ ] **Calendar** with turn & market phases.
-- [ ] Encourage **trading and negotiating**.
+- [x] Encourage **trading and negotiating**.
 - [ ] Solo-playtest: *Hive* card for savings. What about the Queen then?
 - [ ] Solo-playtest: special bees (lazy, burn-out, defender, recruiter etc.)
 - [ ] Solo-playtest: **round-based events**, eg *this round everyone loses a worker*, or *this round the queen is striking*
