Playtesting with Aimee, Mario, Michele and Sara.

--- a/playtesting/2017-06-09.md
+++ b/playtesting/2017-06-09.md
@@ -66,20 +66,19 @@ Final scores:
 
 ## Actions
 
-- [ ] Solo-playtest **honey pot** for flower market.
+- [x] Solo-playtest **honey pot** for flower market.
 - [ ] **Last market** in 2 or 3 *instalments*.
-- [ ] **No replanting** at the end of each round. Start with 6 flowers and that's it.
+- [x] **No replanting** at the end of each round. Start with 6 flowers and that's it.
 - [ ] Solo-playtest: unilaterally decide to give back one bee for 2 flowers?
 - [ ] Solo-playtest: freelance workers.
-- [ ] Keep experimenting with **trading** bees, eg trade a worker for 2 drones, 2 workers for a queen etc.
-- [ ] Keep experimenting with **bee scarcity**: 6D, 6W and 6Q (and solo-playtest these numbers for the 3P and 5P scenarios).
-- [ ] **Referendum**: each player gets a vote. If it's a tie, you count the number of bees (larger beesnesses win).
+- [x] Keep experimenting with **trading** bees, eg trade a worker for 2 drones, 2 workers for a queen etc.
+- [x] Keep experimenting with **bee scarcity**: 6D, 6W and 6Q (and solo-playtest these numbers for the 3P and 5P scenarios).
+- [x] **Referendum**: each player gets a vote. If it's a tie, you count the number of bees (larger beesnesses win).
 - [ ] Reference cards: players can play their turn **actions in any order**.
 - [ ] Reference cards: make it clear that players can **use all their cards** they have during their turn.
 - [ ] Reference cards: remove reference to `selling` bees (it's trading). 
 - [ ] **Timer**: 1 minute.
 - [ ] Honey limit (12) should be on the Queen card.
-- [ ] **Market prices**: 12, 9, 6, 3, 0?
 - [ ] **Calendar** with turn & market phases.
 - [ ] Encourage **trading and negotiating**.
 - [ ] Solo-playtest: *Hive* card for savings. What about the Queen then?
