Playtesting with @aliblackwell, Dom, @mentessi, Ida, Grit, @denisexifaras and Danae.

--- a/playtesting/2017-06-27.md
+++ b/playtesting/2017-06-27.md
@@ -37,7 +37,7 @@ Michele and Aimee stocked up on drones and kept attacking each other (`con quest
 |--|--|--|--|--|
 | Honey | 30 | 33 | 36 | 24 |
 
-A referendum was called on round 4 (half game) 
+A referendum was called on round 4 (half game). 
 
 ## What went well
 
@@ -81,7 +81,7 @@ Sara also commented that the duration of a game feels `right` (but also stated t
 
 ## Actions
 
-- [ ] Keep testing the **honey pot** for flower market (36H).
+- [x] Keep testing the **honey pot** for flower market (36H).
 - [ ] **Last market** in 2 or 3 *instalments*.
 - [ ] Solo-playtest: unilaterally decide to give back one bee for 2 flowers?
 - [ ] Solo-playtest: freelance workers.
