Playtesting with Tina, Olga and several students at Ada College

--- a/playtesting/2017-06-29.md
+++ b/playtesting/2017-06-29.md
@@ -89,9 +89,9 @@ This game exposed the sharp edge of the game, the **beesaster**. Players didn't 
 
 ## Actions
 
-- [ ] **Freelance workers**.
-- [ ] Roll the die to determine the **first player**.
-- [ ] **4 rounds instead of 8**.
+- [x] **Freelance workers**.
+- [x] Roll the die to determine the **first player**.
+- [x] **4 rounds instead of 8**.
 - [ ] Explain clearly that if a referendum goes ahead, **you sacrifice any one of your bees** (not a specific one).
 - [ ] You can **trade the bees back for honey**, for a lesser price than their initial cost (1/2 or 1/3 of initial cost)?
 - [ ] Keep experimenting with **trading** bees, eg trade a worker for 2 drones, 2 workers for a queen etc.
@@ -99,11 +99,11 @@ This game exposed the sharp edge of the game, the **beesaster**. Players didn't 
 - [ ] **Last market** in 2 or 3 *instalments*.
 - [ ] Solo-playtest: **joker bee**?
 - [ ] Solo-playtest: unilaterally decide to give back one bee for 2 flowers?
-- [ ] Reference cards: players can play their turn **actions in any order**.
-- [ ] Reference cards: make it clear that players can **use all their cards** they have during their turn.
+- [x] Reference cards: players can play their turn **actions in any order**.
+- [x] Reference cards: make it clear that players can **use all their cards** they have during their turn.
 - [ ] Reference cards: remove reference to `selling` bees (it's trading). 
 - [ ] **Timer**: 1 minute.
-- [ ] Honey limit (12) should be on the Queen card.
+- [x] Honey limit (12) should be on the Queen card.
 - [ ] **Calendar** with turn & market phases.
 - [ ] Solo-playtest: *Hive* card for savings. What about the Queen then?
 - [ ] Solo-playtest: special bees (lazy, burn-out, defender, recruiter etc.)
