--- a/playtesting/2017-06-27.md
+++ b/playtesting/2017-06-27.md
@@ -81,17 +81,11 @@ Sara also commented that the duration of a game feels `right` (but also stated t
 
 ## Actions
 
-- [x] Keep testing the **honey pot** for flower market (36H).
+- [ ] Keep testing the **honey pot** for flower market (36H).
 - [ ] **Last market** in 2 or 3 *instalments*.
-- [ ] Solo-playtest: unilaterally decide to give back one bee for 2 flowers?
 - [ ] Solo-playtest: freelance workers.
 - [ ] Keep experimenting with **trading** bees, eg trade a worker for 2 drones, 2 workers for a queen etc.
 - [ ] Reference cards: players can play their turn **actions in any order**.
 - [ ] Reference cards: make it clear that players can **use all their cards** they have during their turn.
 - [ ] Reference cards: remove reference to `selling` bees (it's trading). 
-- [ ] **Timer**: 1 minute.
 - [ ] Honey limit (12) should be on the Queen card.
-- [ ] **Calendar** with turn & market phases.
-- [ ] Solo-playtest: *Hive* card for savings. What about the Queen then?
-- [ ] Solo-playtest: special bees (lazy, burn-out, defender, recruiter etc.)
-- [ ] Solo-playtest: **round-based events**, eg *this round everyone loses a worker*, or *this round the queen is striking*
