--- a/versions/v10/v10.1.md
+++ b/versions/v10/v10.1.md
@@ -56,7 +56,7 @@ Type | Full-time or freelance? | Usual action | Last round action
 
 Honey is *money*.
 
-Each player picks a colour token and places it on the `Honeycomb` at 6. 
+Each player picks a colour token and places it on the hexagonal `Honeycomb` at 6. 
 
 That means your initial capital is **6 honey**. 
 
@@ -68,14 +68,13 @@ The more flowers are sold, the less their individual value (aka *supply&demand*)
 
 Total flowers sold <br><sup>by all players | Honey per flower
 ------------------ | ----------------
-1 | 18
-2 | 9
+1 | 12
+2 | 7
 3 | 6
 4 | 5
 5 | 4
 6 | 3
-7 - 13 | 2
-14 + | 1
+7+ | 2
 
 ### 5. Rounds Tracker
 
@@ -116,7 +115,7 @@ When 2+ players want the same bee, they will enter an **auction** for it. The pl
 
 To **hire a bee**, subtract its price in honey from your counter on the `Honeycomb`.
 
-> For example, you currently hold 9 honey and you're hiding a bee for 3 honey. Your counter goes down to 6.
+> For example, you currently hold 9 honey and you're hiring a bee for 3 honey. Your counter goes down to 6.
 
 ### 2. Workers
 
@@ -138,7 +137,7 @@ If two or more players chose the drone card, then they will enter a **blind bid*
 
 > For example: you are selling 2 flowers and another player is selling 3. The total is 5 and according to the `Stalk Exchange` that means 4 honey per flower. So you get 8 honey and the other player 12. Move your counter on the `Honeycomb` 8 steps ahead and the other player's counter by 12 steps.
 	
-If you're the only one playing the drone card, then you get all the honey in the `Stalk Exchange` for just 1 flower! 
+If you're the only one playing the drone card, then you get to decide how many flowers you want to sell! 
 
 Drones are freelance, so after you used one put it in the `Bee Market`.
 
